--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gantari:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gantari:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=BenchNine:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
 
 a:link {
   text-decoration: none;
@@ -44,6 +48,10 @@ body {
   padding: 10px;
 }
 
+.nav-btn {
+  cursor: pointer;
+}
+
 button {
   border: none;
   background: none;
@@ -53,24 +61,76 @@ button {
 }
 
 button:hover {
-  cursor: pointer;
   opacity: 80%;
-}
-
-.search-bar {
-  margin-top: 30px;
-  display: flex;
-  justify-content: center;
 }
 
 input {
   width: 300px;
+  height: 20px;
+  font-size: 20px;
+  outline: none;
+  border: none;
+  background-color: rgb(241, 241, 241);
+  border-bottom: 2px solid rgb(0, 0, 0);
+  background-image: url(https://i.ibb.co/SBGrhXh/Magnifying-glass-icon-svg-1.png);
+  background-repeat: no-repeat;
+  background-position: 1% 70%;
+  text-indent: 20px;
+}
+
+input::placeholder {
+  opacity: 50%;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
+.paging {
+  min-width: 100px;
+  letter-spacing: 1px;
+  font-family: "Roboto Slab", serif;
+  font-size: 10px;
+  color: rgb(50, 50, 50);
+  background-color: red;
+  --g: 6px; /* the gap */
+  --b: 1px; /* border thickness*/
+  --c: #ff0000; /* the color */
+
+  padding: calc(var(--g) + var(--b));
+  --_c: #0000 0 25%, var(--c) 0 50%;
+  --_g1: repeating-linear-gradient(90deg, var(--_c)) repeat-x;
+  --_g2: repeating-linear-gradient(180deg, var(--_c)) repeat-y;
+  background: var(--_g1) var(--_p, 25%) 0, var(--_g2) 0 var(--_p, 125%),
+    var(--_g1) var(--_p, 125%) 100%, var(--_g2) 100% var(--_p, 25%);
+  background-size: 200% var(--b), var(--b) 200%;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.paging:hover {
+  --_p: 75%;
+  color: #ff0000;
+}
+
+.paging-0 {
+  min-width: 100px;
+  opacity: 0%;
+}
+
+.paging-text-0 {
+  opacity: 0%;
 }
 
 .listing-comics {
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
   max-width: 1200px;
   display: flex;
   flex-wrap: wrap;
@@ -123,14 +183,15 @@ input {
 
 .title-comics {
   margin-top: 6px;
-  font-size: 13px;
+  text-align: center;
+  font-size: 18px;
   font-weight: bold;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Ropa Sans", sans-serif;
 }
 
 .listing-characters {
-  margin-top: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
@@ -144,7 +205,7 @@ input {
   border-end-end-radius: 50px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  width: 165px;
+  width: 175px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -165,17 +226,17 @@ input {
 .img-fit-C img {
   margin-top: 4px;
   height: 158px;
-  width: 158px;
+  width: 166px;
   display: flex;
   object-fit: cover;
   object-position: left;
 }
 
 .separator {
-  border-top: 2px solid red;
+  border-top: 2px solid rgb(255, 132, 0);
   margin-left: auto;
   margin-right: auto;
-  max-width: 158px;
+  max-width: 166px;
 }
 
 .title-card-charac {
@@ -203,14 +264,22 @@ input {
 
 .fav-button {
   display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  justify-content: flex-end;
+  margin-top: 40px;
 }
 
 .button {
-  color: red;
+  cursor: pointer;
+  height: 30px;
+  color: rgb(255, 170, 0);
   background-color: white;
   border-radius: 4px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 10px;
+}
+
+.button:hover {
+  opacity: 80%;
 }
 
 .character-style-info {
@@ -222,7 +291,7 @@ input {
 .portrait img {
   height: 380px;
   width: 300px;
-  background-color: aquamarine;
+  border: 2px solid rgb(33, 33, 33);
   display: flex;
   object-fit: cover;
   border-radius: 10px;
@@ -234,32 +303,46 @@ input {
 
 .block-info {
   display: flex;
-  border: 2px solid green;
+  border: 1px solid rgb(128, 128, 128);
+  background-color: #1f1f1f;
+  border-radius: 20px;
+  padding: 10px;
 }
 
 .box-1 {
   margin-top: 30px;
-  background-color: blue;
   width: 200px;
   height: 200px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 30px;
-  color: rgb(56, 56, 56);
+  font-size: 23px;
+  color: rgb(255, 255, 255);
 }
 
 .text-style {
   margin-bottom: 50px;
 }
+
+.text-style-2 {
+  margin-bottom: 47px;
+  font-size: 30px;
+  color: #ff0400;
+}
+
+.text-style-3 {
+  color: #ffffff;
+  opacity: 60%;
+  font-style: italic;
+}
+
 .box-2 {
-  margin-top: 30px;
+  margin-top: 25px;
   margin-left: 40px;
-  background-color: rgb(255, 0, 0);
   height: 200px;
   width: 600px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 30px;
+  font-family: "Gantari", sans-serif;
+  font-size: 23px;
+  color: #cbcbcb;
 }
 
 .header-scroll-text {
@@ -297,7 +380,6 @@ input {
 .comics-fit-scroll img {
   height: 210px;
   width: 150px;
-  background-color: aquamarine;
   display: flex;
   object-fit: cover;
 }
