--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,26 @@ body {
   min-height: 100vh;
 }
 
+.bodyy {
+  background-color: rgb(241, 241, 241);
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  min-height: 100vh;
+}
+
+.bodyyy {
+  padding-top: 40px;
+  padding-bottom: 150px;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 1%,
+    rgba(112, 16, 16, 1) 51%,
+    rgba(11, 3, 3, 1) 100%
+  );
+}
+
 .top-header {
   padding-top: 10px;
   padding-bottom: 6px;
@@ -65,13 +85,15 @@ button:hover {
 }
 
 input {
-  width: 300px;
+  width: 500px;
   height: 20px;
-  font-size: 20px;
+  font-size: 17px;
+  font-family: "Ropa Sans", sans-serif;
+  padding-left: 5px;
   outline: none;
   border: none;
   background-color: rgb(241, 241, 241);
-  border-bottom: 2px solid rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
   background-image: url(https://i.ibb.co/SBGrhXh/Magnifying-glass-icon-svg-1.png);
   background-repeat: no-repeat;
   background-position: 1% 70%;
@@ -86,6 +108,16 @@ input::placeholder {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
+.pagination-bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
@@ -151,13 +183,12 @@ input::placeholder {
   color: red;
 }
 
-.comics-img:hover {
-  padding-bottom: 12px;
+.title-card:hover {
+  padding-top: 12px;
   opacity: 90%;
   cursor: pointer;
   transition: 0.25s padding ease-out;
   box-shadow: none;
-  color: red;
 }
 
 .title-card {
@@ -257,15 +288,19 @@ input::placeholder {
 }
 
 .master-character-page {
-  max-width: 1200px;
+  max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .fav-button {
   display: flex;
-  justify-content: flex-end;
-  margin-top: 40px;
+  justify-content: space-between;
+}
+
+.button-back {
+  color: black;
+  cursor: pointer;
 }
 
 .button {
@@ -303,8 +338,6 @@ input::placeholder {
 
 .block-info {
   display: flex;
-  border: 1px solid rgb(128, 128, 128);
-  background-color: #1f1f1f;
   border-radius: 20px;
   padding: 10px;
 }
@@ -316,7 +349,7 @@ input::placeholder {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 23px;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
 .text-style {
@@ -330,7 +363,7 @@ input::placeholder {
 }
 
 .text-style-3 {
-  color: #ffffff;
+  color: #1c1c1c;
   opacity: 60%;
   font-style: italic;
 }
@@ -339,7 +372,7 @@ input::placeholder {
   margin-top: 25px;
   margin-left: 40px;
   height: 200px;
-  width: 600px;
+  width: 500px;
   font-family: "Gantari", sans-serif;
   font-size: 23px;
   color: #cbcbcb;
@@ -349,10 +382,11 @@ input::placeholder {
   margin-top: 100px;
   display: flex;
   justify-content: center;
-  font-size: 20px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: bold;
+  font-size: 25px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   margin-bottom: 20px;
+  opacity: 80%;
 }
 
 .master-scrolling {
@@ -370,8 +404,8 @@ input::placeholder {
   margin: 0;
   gap: 30px;
   width: 1100px;
-  height: 250px;
-  border: 1px solid rgba(255, 0, 0, 0.223);
+  height: 260px;
+  border: 2px solid rgba(70, 70, 70, 0.223);
   border-radius: 10px;
   overflow-x: scroll;
   margin-bottom: 55px;
@@ -480,13 +514,42 @@ input::placeholder {
 .no-fav {
   color: blue;
   font-size: 20px;
+  background-color: white;
 }
 
 footer {
   width: 100vw;
-  margin-top: 100px;
   height: 200px;
   background-color: rgb(31, 31, 31);
+}
+
+.footer-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-info {
+  display: flex;
+  height: 200px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.details {
+  font-family: "Barlow", sans-serif;
+  color: rgba(255, 255, 255, 0.505);
+  margin-bottom: 10px;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.details:hover {
+  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.694);
 }
 
 .bodY {
@@ -546,4 +609,66 @@ footer {
   100% {
     transform: scale(0);
   }
+}
+
+/* --------------- */
+
+.image {
+  position: relative;
+  width: 200px;
+}
+
+.image__img {
+  display: block;
+  width: 100%;
+}
+
+.image__overlay {
+  position: absolute;
+  text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.613);
+  color: #ffffff;
+  font-size: 8px;
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s;
+}
+
+.image__overlay--blur {
+  backdrop-filter: blur(5px);
+}
+
+.image__overlay--primary {
+  background: #0b0b0bb9;
+}
+
+.image__overlay > * {
+  transform: translateY(20px);
+  transition: transform 0.25s;
+}
+
+.image__overlay:hover {
+  opacity: 1;
+}
+
+.image__overlay:hover > * {
+  transform: translateY(0);
+}
+
+.image__title {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.image__description {
+  font-size: 1.25em;
+  margin-top: 0.25em;
 }
