--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Gantari:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=BenchNine:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=League+Gothic&display=swap");
 
 a:link {
   text-decoration: none;
@@ -554,6 +555,143 @@ footer {
   cursor: pointer;
   font-size: 15px;
   margin-left: 17px;
+}
+
+.home-page {
+  background: rgb(255, 11, 11);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 11, 11, 0.47524947478991597) 12%,
+    rgba(0, 0, 0, 0.6797312675070029) 33%,
+    rgba(0, 0, 0, 0.6265099789915967) 65%,
+    rgba(108, 255, 41, 0.38001137955182074) 84%
+  );
+  padding-top: 40px;
+}
+
+.banner-home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.header-banner {
+  display: flex;
+  flex-direction: column;
+}
+
+.banner-text {
+  font-family: "League Gothic", sans-serif;
+  font-size: 30px;
+}
+
+.banner-text-v {
+  display: flex;
+  justify-content: flex-end;
+  font-family: "League Gothic", sans-serif;
+  font-size: 30px;
+}
+
+.banner-text-spider {
+  font-family: "League Gothic", sans-serif;
+  font-size: 50px;
+  border-bottom: 1px solid black;
+  color: #ff0000;
+}
+
+.banner-text-venom {
+  font-family: "League Gothic", sans-serif;
+  font-size: 50px;
+  border-bottom: 1px solid black;
+}
+
+.banner-text-hulk {
+  font-family: "League Gothic", sans-serif;
+  font-size: 50px;
+  border-bottom: 1px solid black;
+
+  color: green;
+}
+
+.banner {
+  border-radius: 10px;
+}
+
+.master-scrolling-home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scrolling-comics-home {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  gap: 30px;
+  width: 1100px;
+  height: 260px;
+  border-radius: 10px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+.comics-fit-scroll-home {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.comics-fit-scroll-home img {
+  height: 210px;
+  width: 150px;
+  display: flex;
+  object-fit: cover;
+}
+
+.home-img {
+  margin-top: 5px;
+  font-size: 11px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.title-comics-home {
+  margin-top: px;
+  font-size: 17px;
+  font-family: "Ropa Sans", sans-serif;
+}
+
+.home-img-v {
+  margin-top: 5px;
+  font-size: 11px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+}
+
+.title-comics-home-v {
+  font-size: 17px;
+  font-family: "Ropa Sans", sans-serif;
+}
+
+.home-img-v:hover {
+  cursor: pointer;
+  color: rgb(255, 136, 0);
+}
+
+.home-img:hover {
+  cursor: pointer;
+  color: rgb(255, 136, 0);
+}
+
+.comics-fit-scroll-home:hover {
+  cursor: pointer;
+  opacity: 80%;
 }
 
 .details:hover {
