--- a/src/App.css
+++ b/src/App.css
@@ -576,7 +576,7 @@ footer {
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   padding: 10px;
 }
 
@@ -615,7 +615,7 @@ footer {
   font-size: 50px;
   border-bottom: 1px solid black;
 
-  color: green;
+  color: rgb(2, 239, 2);
 }
 
 .banner {
@@ -656,7 +656,7 @@ footer {
 }
 
 .home-img {
-  margin-top: 5px;
+  margin-top: 40px;
   font-size: 11px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -668,10 +668,34 @@ footer {
 }
 
 .home-img-v {
-  margin-top: 5px;
+  margin-top: 40px;
   font-size: 11px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
+}
+
+.sector {
+  border-top: 2px rgb(255, 0, 0);
+  border-bottom: 2px rgb(255, 0, 0);
+  background-color: #1f1f1f9f;
+  border-top-style: dashed;
+  border-bottom-style: dashed;
+}
+
+.sector-v {
+  border-top: 2px rgb(255, 255, 255);
+  border-bottom: 2px rgb(255, 255, 255);
+  background-color: #ffffff3f;
+  border-top-style: dashed;
+  border-bottom-style: dashed;
+}
+
+.sector-h {
+  border-top: 2px rgb(75, 183, 2);
+  border-bottom: 2px rgb(79, 194, 2);
+  background-color: #1111113f;
+  border-top-style: dashed;
+  border-bottom-style: dashed;
 }
 
 .title-comics-home-v {
