--- a/src/App.css
+++ b/src/App.css
@@ -607,6 +607,7 @@ footer {
 .banner-text-venom {
   font-family: "League Gothic", sans-serif;
   font-size: 50px;
+  color: white;
   border-bottom: 1px solid black;
 }
 
